add user class 1117

--- a/airplaneService.vcxproj.filters
+++ b/airplaneService.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Seat.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="User.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AirlineBook.h">
@@ -42,6 +45,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Seat.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="User.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
