--- a/airplaneService.vcxproj
+++ b/airplaneService.vcxproj
@@ -132,12 +132,14 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Schedule.cpp" />
     <ClCompile Include="Seat.cpp" />
+    <ClCompile Include="User.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AirlineBook.h" />
     <ClInclude Include="Console.h" />
     <ClInclude Include="Schedule.h" />
     <ClInclude Include="Seat.h" />
+    <ClInclude Include="User.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
